--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
-  "module": "./src/server.js",
+  "main": "./src/server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +21,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "joi": "^14.3.1",
-    "mongoose": "^5.4.19"
+    "mongoose": "^5.10.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
