--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.15.6",
     "joi": "^14.3.1",
     "mongoose": "^5.10.0",
+    "promise-tool": "^1.1.5",
     "ws": "^7.3.1"
   },
   "devDependencies": {
