--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
-    "connect-mongo": "^2.0.3",
+    "compression": "^1.7.4",
+    "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "helmet": "^4.1.0",
     "mongoose": "^5.10.0",
     "ws": "^7.3.1"
   },
